--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -382,7 +382,17 @@ function calculateGrade() {
     if (grade >= 70) {
         message = "Congratulations! You have completed this phase.";
         showCompletionModal(message, grade); // Exibe o modal com a nota e a mensagem de conclusão
+
+        // Libera a próxima fase
+        firebase.auth().onAuthStateChanged((user) => {
+            if (user) {
+                const userId = user.uid;
+                const { level, unit } = getLevelAndUnitFromURL();
+                liberarProximaFase(userId, level, unit);
+            }
+        });
     } else {
+        // Nota insuficiente; verifica se o aluno está vinculado a um professor
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
                 const userId = user.uid;
@@ -396,7 +406,6 @@ function calculateGrade() {
                 });
             }
         });
-        return; // Sai da função para evitar o modal de conclusão sem mensagem
     }
 }
 
