--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -542,15 +542,23 @@ function liberarProximaFase(userId, level, unit) {
     const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
     const faseAtual = getPhaseFromURL();
 
-    // Verifica o valor da fase na URL
-    if (faseAtual === 'last' || faseAtual === 'end') {
-        // Libera a primeira fase do próximo nível/unidade
+    if (faseAtual === 'end') {
+        // Inicia o próximo nível na primeira unidade e fase1
         const proximoLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-        const novaUnit = 'Unit1'; // Começa uma nova unidade no próximo nível
+        const novaUnit = 'Unit1';
 
         firebase.database().ref(`usuarios/${userId}/progresso/${proximoLevel}/${novaUnit}`)
             .update({ fase1: true })
             .then(() => console.log(`Primeira fase do ${proximoLevel} liberada.`))
+            .catch(error => console.error("Erro ao liberar nova fase:", error));
+
+    } else if (faseAtual === 'last') {
+        // Avança para a próxima unidade no mesmo nível
+        const novaUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+
+        firebase.database().ref(`usuarios/${userId}/progresso/${level}/${novaUnit}`)
+            .update({ fase1: true })
+            .then(() => console.log(`Primeira fase do ${level}, ${novaUnit} liberada.`))
             .catch(error => console.error("Erro ao liberar nova fase:", error));
     } else {
         // Se faseAtual for um número, libera a próxima fase na mesma unidade
