--- a/Level1/Unit1/Testlistening/index.html
+++ b/Level1/Unit1/Testlistening/index.html
@@ -22,42 +22,27 @@
             margin-bottom: 20px;
         }
  
-/* Estilo para a exibição da nota - nota alta (verde) */
-.grade-style {
-    text-align: center;
-    font-size: 1.4em;
-    color: #4CAF50; /* Cor verde para o texto da nota */
-    font-weight: bold;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 2px solid #4CAF50;
-    border-radius: 10px;
-    background-color: #e8f5e9; /* Fundo verde claro */
-    width: 50%;
-    margin: 20px auto; /* Centralizar o elemento */
-}
+/* Estilos de nota simplificados */
+    .grade-style, .grade-style-red {
+        text-align: center;
+        font-size: 1.4em;
+        color: #FF0000; /* Cor vermelha para nota baixa */
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
 
-.grade-style span {
-    color: red; /* Cor vermelha para a mensagem do professor */
-    font-size: 0.9em;
-    display: block;
-    margin-top: 5px;
-}
+    /* Cor verde para notas altas */
+    .grade-style {
+        color: #4CAF50;
+    }
 
-/* Estilo para a exibição da nota - nota baixa (vermelho) */
-.grade-style-red {
-    text-align: center;
-    font-size: 1.4em;
-    color: #FF0000; /* Cor vermelha para o texto da nota */
-    font-weight: bold;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 2px solid #FF0000;
-    border-radius: 10px;
-    background-color: #fdecea; /* Fundo vermelho claro */
-    width: 50%;
-    margin: 20px auto;
-}
+    /* Mensagem do professor */
+    .grade-style span {
+        color: red;
+        font-size: 0.9em;
+        display: block;
+        margin-top: 5px;
+    }
       
         .question-container {
             display: flex;
