--- a/Level1/Unit1/Testword1/index.html
+++ b/Level1/Unit1/Testword1/index.html
@@ -398,7 +398,7 @@ function calculateGrade() {
                 const userId = user.uid;
                 isStudentLinkedToProfessor(userId).then(isLinked => {
                     if (isLinked) {
-                        message = "Insufficient score. Please contact your teacher to update your grade.";
+                        message = "Insufficient score. Only your teacher can cancel this grade.";
                     } else {
                         message = "Insufficient score. Please retake the test to achieve a minimum score of 70%.";
                     }
