--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -464,7 +464,7 @@ function displayGrade(grade) {
                 const userId = user.uid;
                 isStudentLinkedToProfessor(userId).then(isLinked => {
                     if (isLinked) {
-                        gradeDisplay.innerHTML = `Your Grade: ${grade}% - Insufficient score. Please contact your teacher to update your grade.`;
+                        gradeDisplay.innerHTML = `Your Grade: ${grade}% - Insufficient score. Only your teacher can cancel this grade.`;
                     } else {
                         gradeDisplay.innerHTML = `Your Grade: ${grade}% - Insufficient score. Please retake the test to achieve at least 70%.`;
                     }
