--- a/Level1/Unit1/Testimagem/index.html
+++ b/Level1/Unit1/Testimagem/index.html
@@ -198,7 +198,7 @@ let gradeRef;
 function displayGradeAndMessage(userId) {
     if (gradeRef) gradeRef.off(); // Remove qualquer listener anterior
 
-    gradeRef = firebase.database().ref(`usuarios/${userId}/progresso/Level1/Unit1/nota`);
+    gradeRef = firebase.database().ref(`usuarios/${userId}/progresso/Level1/Unit1/nota5`);
 
     gradeRef.on("value", (snapshot) => {
         const grade = snapshot.val();
@@ -493,16 +493,16 @@ function saveGrade(userId, grade) {
     const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
     // Verifica a nota existente e se o aluno está vinculado a um professor
-    dbRef.child('nota').once('value').then(snapshot => {
+    dbRef.child('nota5').once('value').then(snapshot => {
         const existingGrade = snapshot.val();
 
         // Chama a função para verificar se o aluno está vinculado a um professor
         isStudentLinkedToProfessor(userId).then(isLinked => {
             // Se o aluno não estiver vinculado ou a nota for zero/nula, permite a atualização
             if (!isLinked || !existingGrade || existingGrade === 0) {
-                dbRef.update({ nota: grade })
+                dbRef.update({ nota5: grade })
                     .then(() => console.log("Nota salva com sucesso."))
-                    .catch(error => console.error("Erro ao salvar a nota:", error));
+                    .catch(error => console.error("Erro ao salvar a nota5:", error));
             } else {
                 console.log("Nota já registrada. Somente o professor pode modificar.");
             }
