--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -308,6 +308,7 @@ firebase.auth().onAuthStateChanged(function(user) {
     let questions = [];
     let answeredQuestions = [];
     let speechSynthesisUtterance = null;
+    let selectedAnswers = [];
 
   async function loadQuestions() {
     try {
@@ -344,7 +345,7 @@ firebase.auth().onAuthStateChanged(function(user) {
     }
 }
 
-    function displayQuestion() {
+   function displayQuestion() {
     const container = document.getElementById('quiz-container');
     container.innerHTML = '';
 
@@ -357,9 +358,12 @@ firebase.auth().onAuthStateChanged(function(user) {
     questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
     questionDiv.appendChild(questionText);
 
+    // Adiciona as opções de resposta e verifica se há uma seleção anterior
     q.answers.forEach((answer) => {
         const answerLabel = document.createElement('label');
-        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
+        // Verifica se esta opção foi selecionada anteriormente
+        const isChecked = selectedAnswers[currentQuestionIndex] === answer[0]; 
+        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="selectAnswer('${answer[0]}')" ${isChecked ? 'checked' : ''}> ${answer}`;
         questionDiv.appendChild(answerLabel);
     });
 
@@ -385,6 +389,12 @@ firebase.auth().onAuthStateChanged(function(user) {
             finishButton.remove();
         }
     }
+}
+
+// Função para registrar a resposta selecionada
+function selectAnswer(answer) {
+    selectedAnswers[currentQuestionIndex] = answer; // Armazena a resposta selecionada
+    checkAnswer(null, answer); // Verifica se a resposta está correta
 }
 
     function updateNavigationButtons() {
