--- a/Level1/Unit1/Testlistening/index.html
+++ b/Level1/Unit1/Testlistening/index.html
@@ -308,6 +308,7 @@ firebase.auth().onAuthStateChanged(function(user) {
     let questions = [];
     let answeredQuestions = [];
     let speechSynthesisUtterance = null;
+    let selectedAnswers = [];
 
   async function loadQuestions() {
     try {
@@ -344,7 +345,7 @@ firebase.auth().onAuthStateChanged(function(user) {
     }
 }
 
-    function displayQuestion() {
+   function displayQuestion() {
     const container = document.getElementById('quiz-container');
     container.innerHTML = '';
 
@@ -356,14 +357,16 @@ firebase.auth().onAuthStateChanged(function(user) {
     const audioButton = document.createElement('button');
     audioButton.innerHTML = 'Play Audio <span style="font-size: 1.2em;">🔊</span>';
     audioButton.classList.add('read-btn');
-    audioButton.style.marginBottom = '20px'; // Adiciona margem inferior ao botão
+    audioButton.style.marginBottom = '20px';
     audioButton.onclick = () => readQuestion(q.question); // Passa o texto da pergunta para ser lido
     questionDiv.appendChild(audioButton);
 
-    // Adiciona as alternativas de resposta
+    // Adiciona as alternativas de resposta e verifica se há uma seleção anterior
     q.answers.forEach((answer) => {
         const answerLabel = document.createElement('label');
-        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
+        // Verifica se esta opção foi selecionada anteriormente
+        const isChecked = selectedAnswers[currentQuestionIndex] === answer[0];
+        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="selectAnswer('${answer[0]}')" ${isChecked ? 'checked' : ''}> ${answer}`;
         questionDiv.appendChild(answerLabel);
     });
 
@@ -390,6 +393,12 @@ firebase.auth().onAuthStateChanged(function(user) {
             finishButton.remove();
         }
     }
+}
+
+// Função para registrar a resposta selecionada
+function selectAnswer(answer) {
+    selectedAnswers[currentQuestionIndex] = answer; // Armazena a resposta selecionada
+    checkAnswer(null, answer); // Verifica se a resposta está correta
 }
 
     function updateNavigationButtons() {
