--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -154,6 +154,7 @@
        <a href="Fine Motor Skills/index.html"><img src="../../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
         <a href="Missing Letter/index.html"><img src="../../../imagens/botoes/missing_letter_button.png" alt="Missing Letter"></a>
         <a href="Mixed Letters/index.html"><img src="../../../imagens/botoes/mixed_letters_button.png" alt="Mixed Letters"></a>     
+        <a href="Colorir/index.html"><img src="../../../imagens/botoes/color_button.png" alt="Mixed Letters"></a>    
     </div>
 
     <!-- Div onde o texto do arquivo será carregado -->
