--- a/Level1/Unit1/teacher/Colorir/index.html
+++ b/Level1/Unit1/teacher/Colorir/index.html
@@ -115,7 +115,7 @@
     const pdf = new jsPDF();
 
     const logo = new Image();
-    logo.src = "../../../../imagens/hannah_logo.png"; // Caminho atualizado para o logotipo
+    logo.src = "../../../../imagens/hannah_logo.png";
 
     logo.onload = function () {
       pdf.addImage(logo, "PNG", 10, 10, 20, 20);
