--- a/Level1/Unit1/teacher/Colorir/index.html
+++ b/Level1/Unit1/teacher/Colorir/index.html
@@ -71,7 +71,9 @@
   <img src="imagens/imagem1.png" alt="Drawing 1" class="thumbnail" onclick="selectImage('imagens/imagem1.png')">
   <img src="imagens/imagem2.png" alt="Drawing 2" class="thumbnail" onclick="selectImage('imagens/imagem2.png')">
   <img src="imagens/imagem3.png" alt="Drawing 3" class="thumbnail" onclick="selectImage('imagens/imagem3.png')">
-  <!-- Continue adding thumbnails as needed -->
+  <img src="imagens/imagem4.png" alt="Drawing 4" class="thumbnail" onclick="selectImage('imagens/imagem4.png')">
+  <img src="imagens/imagem5.png" alt="Drawing 5" class="thumbnail" onclick="selectImage('imagens/imagem5.png')">
+  <img src="imagens/imagem6.png" alt="Drawing 6" class="thumbnail" onclick="selectImage('imagens/imagem6.png')">
 </div>
 
 <img id="selectedImage" src="" alt="Selected Drawing">
