--- a/Level1/Unit1/teacher/Colorir/index.html
+++ b/Level1/Unit1/teacher/Colorir/index.html
@@ -99,7 +99,7 @@
 
     // Adiciona a logo ao PDF
     const logo = new Image();
-    logo.src = "../../../../imagens/logo.png";
+    logo.src = "../../../../imagens/hannah_logo.png";
 
     logo.onload = function () {
       pdf.addImage(logo, "PNG", 10, 10, 20, 20);
