--- a/Level1/Unit1/teacher/Colorir/index.html
+++ b/Level1/Unit1/teacher/Colorir/index.html
@@ -30,11 +30,17 @@
       flex-wrap: wrap;
       justify-content: center;
     }
+    #selectedImageContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+      display: none;
+    }
     #selectedImage {
       max-width: 80%;
       height: auto;
       margin: 20px 0;
-      display: none;
     }
     #generatePdfBtn {
       display: none;
@@ -76,9 +82,10 @@
   <img src="imagens/imagem6.png" alt="Drawing 6" class="thumbnail" onclick="selectImage('imagens/imagem6.png')">
 </div>
 
-<img id="selectedImage" src="" alt="Selected Drawing">
-<br>
-<button id="generatePdfBtn" onclick="generatePDF()">Generate PDF</button>
+<div id="selectedImageContainer">
+  <img id="selectedImage" src="" alt="Selected Drawing">
+  <button id="generatePdfBtn" onclick="generatePDF()">Generate PDF</button>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script>
@@ -88,8 +95,9 @@
 
   function selectImage(src) {
     const selectedImage = document.getElementById("selectedImage");
+    const selectedImageContainer = document.getElementById("selectedImageContainer");
     selectedImage.src = src;
-    selectedImage.style.display = "block";
+    selectedImageContainer.style.display = "flex";
     document.getElementById("generatePdfBtn").style.display = "inline-block";
   }
 
@@ -97,7 +105,6 @@
     const { jsPDF } = window.jspdf;
     const pdf = new jsPDF();
 
-    // Adiciona a logo ao PDF
     const logo = new Image();
     logo.src = "../../../../imagens/hannah_logo.png";
 
@@ -109,7 +116,6 @@
       pdf.setFontSize(18);
       pdf.text("Hannah Coloring", 105, 40, { align: "center" });
 
-      // Adiciona a imagem selecionada ao PDF
       const selectedImage = document.getElementById("selectedImage");
       if (selectedImage.src) {
         const img = new Image();
