--- a/Level1/Unit1/teacher/Colorir/index.html
+++ b/Level1/Unit1/teacher/Colorir/index.html
@@ -99,6 +99,9 @@
     selectedImage.src = src;
     selectedImageContainer.style.display = "flex";
     document.getElementById("generatePdfBtn").style.display = "inline-block";
+
+    // Rolar para o final da página após a seleção
+    selectedImageContainer.scrollIntoView({ behavior: "smooth", block: "end" });
   }
 
   function generatePDF() {
