--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -6,7 +6,7 @@
     <title>Life Lessons from the Bible</title>
     <style>
         body {
-            background-image: url('../../imagens/hanna_fundo.png');
+            background-image: url('../../../imagens/hanna_fundo.png');
             background-repeat: repeat;
             font-family: Arial, sans-serif;
             display: flex;
@@ -36,6 +36,7 @@
             border-radius: 4px;
             cursor: pointer;
             user-select: none;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
         #answer-area {
             width: 100%;
@@ -62,6 +63,16 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        }
+        .nav-btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
@@ -77,8 +88,8 @@
     <div id="answer-area" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     
     <div id="nav-buttons">
-        <button onclick="prevQuestion()">Previous</button>
-        <button onclick="nextQuestion()">Next</button>
+        <button class="nav-btn" onclick="prevQuestion()">Previous</button>
+        <button class="nav-btn" onclick="nextQuestion()">Next</button>
     </div>
 </div>
 
@@ -110,6 +121,7 @@
         wordElem.textContent = word;
         wordElem.setAttribute('draggable', 'true');
         wordElem.ondragstart = event => event.dataTransfer.setData('text', word);
+        wordElem.id = `word-${word}`; // Set ID for easier removal
         document.getElementById('words-container').appendChild(wordElem);
     }
 
@@ -147,10 +159,14 @@
         if (answerArea.children.length === 0) {
             answerArea.appendChild(createAnswerElem(word));
             userAnswers[currentQuestionIndex] = word;
+            document.getElementById(`word-${word}`).style.display = 'none'; // Hide word from the top
         } else {
-            document.getElementById('words-container').appendChild(answerArea.children[0]);
+            const existingWord = answerArea.children[0].textContent;
+            document.getElementById(`word-${existingWord}`).style.display = ''; // Show word back on top
+            answerArea.innerHTML = ''; // Clear answer area
             answerArea.appendChild(createAnswerElem(word));
             userAnswers[currentQuestionIndex] = word;
+            document.getElementById(`word-${word}`).style.display = 'none';
         }
     }
 
