--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -6,7 +6,7 @@
     <title>Life Lessons from the Bible</title>
     <style>
         body {
-            background-image: url('../../../imagens/hanna_fundo.png');
+            background-image: url('../../../imagens/fundo.png');
             background-repeat: repeat;
             font-family: Arial, sans-serif;
             display: flex;
