--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -6,7 +6,7 @@
     <title>Life Lessons from the Bible</title>
     <style>
         body {
-            background-image: url('../../../imagens/fundo.png');
+            background-image: url('../../imagens/hanna_fundo.png');
             background-repeat: repeat;
             font-family: Arial, sans-serif;
             display: flex;
@@ -156,17 +156,27 @@
         const word = event.dataTransfer.getData('text');
         const answerArea = document.getElementById('answer-area');
 
-        if (answerArea.children.length === 0) {
-            answerArea.appendChild(createAnswerElem(word));
-            userAnswers[currentQuestionIndex] = word;
-            document.getElementById(`word-${word}`).style.display = 'none'; // Hide word from the top
+        // Check if dropped in the answer area
+        if (event.target.id === 'answer-area') {
+            if (answerArea.children.length === 0) {
+                answerArea.appendChild(createAnswerElem(word));
+                userAnswers[currentQuestionIndex] = word;
+                document.getElementById(`word-${word}`).style.display = 'none';
+            } else {
+                const existingWord = answerArea.children[0].textContent;
+                document.getElementById(`word-${existingWord}`).style.display = ''; // Return existing word to top
+                answerArea.innerHTML = ''; // Clear answer area
+                answerArea.appendChild(createAnswerElem(word));
+                userAnswers[currentQuestionIndex] = word;
+                document.getElementById(`word-${word}`).style.display = 'none';
+            }
         } else {
-            const existingWord = answerArea.children[0].textContent;
-            document.getElementById(`word-${existingWord}`).style.display = ''; // Show word back on top
-            answerArea.innerHTML = ''; // Clear answer area
-            answerArea.appendChild(createAnswerElem(word));
-            userAnswers[currentQuestionIndex] = word;
-            document.getElementById(`word-${word}`).style.display = 'none';
+            // Return word to the top if dropped outside of answer area
+            if (userAnswers[currentQuestionIndex] === word) {
+                delete userAnswers[currentQuestionIndex];
+                document.getElementById(`word-${word}`).style.display = ''; // Show word back on top
+                answerArea.innerHTML = ''; // Clear answer area
+            }
         }
     }
 
