--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -155,26 +155,27 @@
         event.preventDefault();
         const word = event.dataTransfer.getData('text');
         const answerArea = document.getElementById('answer-area');
+        const wordsContainer = document.getElementById('words-container');
 
         // Check if dropped in the answer area
         if (event.target.id === 'answer-area') {
             if (answerArea.children.length === 0) {
                 answerArea.appendChild(createAnswerElem(word));
                 userAnswers[currentQuestionIndex] = word;
-                document.getElementById(`word-${word}`).style.display = 'none';
+                document.getElementById(`word-${word}`).remove(); // Remove from top
             } else {
                 const existingWord = answerArea.children[0].textContent;
-                document.getElementById(`word-${existingWord}`).style.display = ''; // Return existing word to top
+                wordsContainer.appendChild(createDraggableWord(existingWord)); // Return existing word to top
                 answerArea.innerHTML = ''; // Clear answer area
                 answerArea.appendChild(createAnswerElem(word));
                 userAnswers[currentQuestionIndex] = word;
-                document.getElementById(`word-${word}`).style.display = 'none';
+                document.getElementById(`word-${word}`).remove();
             }
         } else {
             // Return word to the top if dropped outside of answer area
             if (userAnswers[currentQuestionIndex] === word) {
                 delete userAnswers[currentQuestionIndex];
-                document.getElementById(`word-${word}`).style.display = ''; // Show word back on top
+                wordsContainer.appendChild(createDraggableWord(word)); // Show word back on top
                 answerArea.innerHTML = ''; // Clear answer area
             }
         }
