--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -175,7 +175,10 @@
             // Return word to the top if dropped outside of answer area
             if (userAnswers[currentQuestionIndex] === word) {
                 delete userAnswers[currentQuestionIndex];
-                wordsContainer.appendChild(createDraggableWord(word)); // Show word back on top
+                const existingWordElem = document.getElementById(`word-${word}`);
+                if (!existingWordElem) {
+                    wordsContainer.appendChild(createDraggableWord(word)); // Show word back on top
+                }
                 answerArea.innerHTML = ''; // Clear answer area
             }
         }
