--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -10,23 +10,25 @@
             background-repeat: repeat;
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             flex-direction: column;
             min-height: 100vh;
             margin: 0;
+            padding-top: 20px; /* Adds padding at the top to push content down */
         }
         h1 {
-            margin-top: 20px;
+            margin-top: 10px; /* Positions the title closer to the top */
             text-align: center;
+            font-size: 24px;
+            color: #333;
         }
         #questions-container {
             width: 80%;
             max-width: 600px;
             padding: 20px;
-            background: #fff;
+            background: transparent; /* Makes the container background transparent */
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .clickable-word {
             display: inline-block;
@@ -67,7 +69,6 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
         .nav-btn {
             background-color: #4CAF50;
@@ -76,7 +77,6 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
@@ -124,7 +124,7 @@
         wordElem.classList.add('clickable-word');
         wordElem.textContent = word;
         wordElem.onclick = () => selectAnswer(wordElem, word);
-        wordElem.id = `word-${word}`; // Set ID for easier removal
+        wordElem.id = `word-${word}`;
         document.getElementById('words-container').appendChild(wordElem);
     }
 
