--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -10,15 +10,14 @@
             background-repeat: repeat;
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
             flex-direction: column;
             min-height: 100vh;
             margin: 0;
-            padding-top: 20px; /* Adds padding at the top to push content down */
         }
         h1 {
-            margin-top: 10px; /* Positions the title closer to the top */
+            margin-top: 50px; /* Adds space at the top to avoid overlap */
             text-align: center;
             font-size: 24px;
             color: #333;
@@ -27,8 +26,9 @@
             width: 80%;
             max-width: 600px;
             padding: 20px;
-            background: transparent; /* Makes the container background transparent */
+            background: transparent; /* Transparent background */
             border-radius: 8px;
+            margin-top: 20px; /* Centers the activity area vertically */
         }
         .clickable-word {
             display: inline-block;
@@ -61,14 +61,15 @@
         }
         #back-btn {
             position: absolute;
-            top: 10px;
-            left: 10px;
+            top: 15px; /* Adjusted to prevent overlap */
+            left: 15px;
             background-color: #000;
             color: #fff;
             padding: 10px 15px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            z-index: 10; /* Ensures the back button stays on top */
         }
         .nav-btn {
             background-color: #4CAF50;
@@ -77,6 +78,46 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+        }
+
+        /* Modal styling */
+        #modal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        #modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            max-width: 400px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+        #modal-content h2 {
+            margin: 0;
+            font-size: 20px;
+            color: #333;
+        }
+        #modal-content p {
+            margin: 15px 0;
+            font-size: 16px;
+            color: #555;
+        }
+        #modal-close {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -94,6 +135,15 @@
     <div id="nav-buttons">
         <button class="nav-btn" onclick="prevQuestion()">Previous</button>
         <button class="nav-btn" onclick="nextQuestion()">Next</button>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="modal">
+    <div id="modal-content">
+        <h2>Well Done!</h2>
+        <p id="modal-message">Congratulations! You have completed the phase.</p>
+        <button id="modal-close" onclick="closeModal()">Close</button>
     </div>
 </div>
 
@@ -189,9 +239,9 @@
             }
         }
         if (allCorrect) {
-            alert("Congratulations! You have completed the phase.");
+            showModal("Congratulations! You have completed the phase.");
         } else {
-            alert("Some answers were incorrect. Try again!");
+            showModal("Some answers were incorrect. Try again!");
             currentQuestionIndex = 0;
             loadQuestion();
             resetIncorrectAnswers();
@@ -201,6 +251,15 @@
     function resetIncorrectAnswers() {
         document.getElementById('words-container').innerHTML = '';
         initializeActivity();
+    }
+
+    function showModal(message) {
+        document.getElementById("modal-message").textContent = message;
+        document.getElementById("modal").style.display = "flex";
+    }
+
+    function closeModal() {
+        document.getElementById("modal").style.display = "none";
     }
 
     function goBack() {
